# UCAS_CProgrammingClass_midterm_P2PChessGame

./: .gitignore  CMakeLists.txt  README.md  cmake_build.bat
src/: main.c
src/board/: board.c  board.h
src/display/: display.c  display.h
src/rule/: rule.bak.c  rule.bak.h  rule.c  rule.h
test/: test_rule.c
